// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    addStravaInfo={[Function]}
    changeMonth={[Function]}
    clearRides={[Function]}
    logoutUser={[Function]}
    user={
        Object {
            "id": 12,
            "name": "Pat",
            "token": "2y589wyasdfhgfiouqehr8to8",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="logo-link"
          onClick={[Function]}
          to="/main"
>
          <h1
                    className="logo"
          >
                    fullSend
          </h1>
</NavLink>,
        <Nav />,
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="logout"
          onClick={[Function]}
          to="/"
>
          Logout
</NavLink>,
        false,
      ],
      "className": "app-header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": <h1
            className="logo"
>
            fullSend
</h1>,
          "className": "logo-link",
          "onClick": [Function],
          "to": "/main",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "fullSend",
            "className": "logo",
          },
          "ref": null,
          "rendered": "fullSend",
          "type": "h1",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": "Logout",
          "className": "logout",
          "onClick": [Function],
          "to": "/",
        },
        "ref": null,
        "rendered": "Logout",
        "type": [Function],
      },
      false,
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="logo-link"
            onClick={[Function]}
            to="/main"
>
            <h1
                        className="logo"
            >
                        fullSend
            </h1>
</NavLink>,
          <Nav />,
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="logout"
            onClick={[Function]}
            to="/"
>
            Logout
</NavLink>,
          false,
        ],
        "className": "app-header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": <h1
              className="logo"
>
              fullSend
</h1>,
            "className": "logo-link",
            "onClick": [Function],
            "to": "/main",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "fullSend",
              "className": "logo",
            },
            "ref": null,
            "rendered": "fullSend",
            "type": "h1",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": "Logout",
            "className": "logout",
            "onClick": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": "Logout",
          "type": [Function],
        },
        false,
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header should match the snapshot after userInfo arrives 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    addStravaInfo={[Function]}
    changeMonth={[Function]}
    clearRides={[Function]}
    logoutUser={[Function]}
    user={
        Object {
            "id": 12,
            "name": "Pat",
            "token": "2y589wyasdfhgfiouqehr8to8",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="logo-link"
          onClick={[Function]}
          to="/main"
>
          <h1
                    className="logo"
          >
                    fullSend
          </h1>
</NavLink>,
        <Nav />,
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="logout"
          onClick={[Function]}
          to="/"
>
          Logout
</NavLink>,
        false,
      ],
      "className": "app-header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": <h1
            className="logo"
>
            fullSend
</h1>,
          "className": "logo-link",
          "onClick": [Function],
          "to": "/main",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "fullSend",
            "className": "logo",
          },
          "ref": null,
          "rendered": "fullSend",
          "type": "h1",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": "Logout",
          "className": "logout",
          "onClick": [Function],
          "to": "/",
        },
        "ref": null,
        "rendered": "Logout",
        "type": [Function],
      },
      false,
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="logo-link"
            onClick={[Function]}
            to="/main"
>
            <h1
                        className="logo"
            >
                        fullSend
            </h1>
</NavLink>,
          <Nav />,
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="logout"
            onClick={[Function]}
            to="/"
>
            Logout
</NavLink>,
          false,
        ],
        "className": "app-header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": <h1
              className="logo"
>
              fullSend
</h1>,
            "className": "logo-link",
            "onClick": [Function],
            "to": "/main",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "fullSend",
              "className": "logo",
            },
            "ref": null,
            "rendered": "fullSend",
            "type": "h1",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": "Logout",
            "className": "logout",
            "onClick": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": "Logout",
          "type": [Function],
        },
        false,
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header should not update state if no user is present 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    user={
        Object {
            "id": null,
            "name": "",
            "token": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="logo-link"
          onClick={[Function]}
          to="/main"
>
          <h1
                    className="logo"
          >
                    fullSend
          </h1>
</NavLink>,
        <Nav />,
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          className="logout"
          onClick={[Function]}
          to="/"
>
          Logout
</NavLink>,
        false,
      ],
      "className": "app-header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": <h1
            className="logo"
>
            fullSend
</h1>,
          "className": "logo-link",
          "onClick": [Function],
          "to": "/main",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "fullSend",
            "className": "logo",
          },
          "ref": null,
          "rendered": "fullSend",
          "type": "h1",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "ariaCurrent": "true",
          "children": "Logout",
          "className": "logout",
          "onClick": [Function],
          "to": "/",
        },
        "ref": null,
        "rendered": "Logout",
        "type": [Function],
      },
      false,
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="logo-link"
            onClick={[Function]}
            to="/main"
>
            <h1
                        className="logo"
            >
                        fullSend
            </h1>
</NavLink>,
          <Nav />,
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="logout"
            onClick={[Function]}
            to="/"
>
            Logout
</NavLink>,
          false,
        ],
        "className": "app-header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": <h1
              className="logo"
>
              fullSend
</h1>,
            "className": "logo-link",
            "onClick": [Function],
            "to": "/main",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "fullSend",
              "className": "logo",
            },
            "ref": null,
            "rendered": "fullSend",
            "type": "h1",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": "Logout",
            "className": "logout",
            "onClick": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": "Logout",
          "type": [Function],
        },
        false,
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
